Docs: Complete removal of ZGC in jvm-args.md and replaced with optimal G1GC parameters (including InitiatingHeapOccupancyPercent=15) for Android compatibility